--- a/package.json
+++ b/package.json
@@ -15,7 +15,20 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "eslint --fix"
+    ],
+    "*.{js,ts,vue,css,md,json}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@nuxt/eslint": "^1.11.0",
@@ -24,8 +37,15 @@
     "@nuxt/ui": "^4.2.1",
     "eslint": "^9.39.1",
     "nuxt": "^4.2.1",
-    "typescript": "^5.9.3",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.4",
+    "typescript": "^5.9.3"
   }
 }
