--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
+    "test": "vitest run --passWithNoTests",
     "prepare": "husky"
   },
   "lint-staged": {
