--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "test": "vitest run --passWithNoTests",
+    "test": "vitest run",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -45,9 +45,11 @@
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.79",
     "@types/culori": "^4.0.1",
+    "@vue/test-utils": "^2.4.6",
     "@vueuse/nuxt": "^14.1.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "happy-dom": "^20.0.11",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
