--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "test": "vitest run",
+    "test:unit": "vitest run",
+    "test:e2e": "vitest run --config vitest.config.e2e.ts",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -52,6 +54,7 @@
     "happy-dom": "^20.0.11",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "playwright-core": "^1.57.0",
     "prettier": "^3.7.4",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4"
