feat(seo): add comprehensive SEO optimization with structured data
- Add @nuxtjs/seo module for sitemap, schema.org, and robots
- Configure site settings with production URL and metadata
- Create useSeoSchemas composable with WebApplication and FAQ schemas
- Add keyword-optimized meta tags to all pages (hex to rgb, oklch converter, etc.)
- Implement JSON-LD structured data:
  - WebApplication schema with feature list
  - FAQPage schema on about page
  - Organization and WebSite schemas
- Auto-generate sitemap.xml at /sitemap.xml
- Update hero title to include target keywords

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nuxt/hints": "^1.0.0-alpha.3",
     "@nuxt/test-utils": "^3.21.0",
     "@nuxt/ui": "^4.2.1",
+    "@nuxtjs/seo": "^3.2.2",
     "culori": "^4.0.2",
     "eslint": "^9.39.1",
     "magic-regexp": "^0.10.0",
